webapp/src/App.css
/*   Color scheme
#1F2232;    # Dark Metallic
#EC4E20;    # Red
#E8ECEE;    # Light grey
#40798C;    # Teal
#70A9A1;    # Green
*/

.App {
  text-align: center;
}

.App-header {
  background-color: #1F2232;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  height: 60px;
}

.App-link {
  color: #40798C;
}

body {
  font-family: 'Open Sans', sans-serif;
}

.Body{
  background-image: url("./images/Baobab.png");
  background-size: cover;
  min-height: 94.5vh;
  position: relative;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-family: 'Roboto', sans-serif;
}

.HomeNavBar{
  margin-bottom: 0px;
}

footer {
  padding: 1em;
  background: white;
  position: absolute;
  border-top: 1px solid  hsl(0deg 0% 95%);
  bottom: 0;
  width: 100%;
  font-size: 11px;
}

footer .btn {
  margin-top: -0.5em;
}

@media (max-width: 650px) {
  .Body {
    padding-top: 3em;
  }
}

.container-fluid {
  padding-right: 30px;
  padding-left: 30px;
}

.link-style{
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
}

/*Navbar*/
#navbarNav {
  margin-right: 20px;
}

.navbar-nav .dropdown-menu.show{
  left: -5px;
}

.nav-link {
  cursor: pointer;
}

.cursor-pointer {
  cursor: pointer;
}

.navbar-light .navbar-nav .nav-link.active {
  font-weight: bold;
  border-bottom: 3px solid #27A844;
}

.navbar-light .navbar-nav .nav-item .nav-link{
  padding-bottom: 0.75em;
  padding-top: 0.75em;
}

.navbar-light {
  padding-left: 2em;
  padding-top: 0;
  padding-right: 2em;
  padding-bottom: 0;
  border-bottom-color: rgb(221, 221, 221);
  border-bottom-style: solid;
  border-bottom-width: 1px;
}

.navbar-light .navbar-brand {
  color: rgba(0, 0, 0);
  padding-bottom: 0.5em;
  padding-top: 0.5em;
}

.navbar-light .navbar-nav .nav-link {
  color: rgba(0,0,0,.75);
}

.navbar-brand-main {
  letter-spacing: 0.05em;
  text-transform: uppercase;
}

.navbar-brand .brand-image {
  margin-right: 10px;
}



.alert-container{
  margin-top: 16px;
}

.form-group {
  white-space: pre-wrap;
}

.card {
  box-shadow: 0px 2px 4px rgba(0,0,0,0.15);
  padding-top: 30px;
  padding-bottom: 30px;
  margin-top: 15px;
}

label {
  margin-bottom: .2rem;
}


.powered-by a {
  font-weight: bold;
}

.bg-dark {
  background-color: #1f2d3e !important;
}

.disabled-form-control {
  color: rgba(0, 0, 0, 0.3);
}

.language-navbar {
  padding-right: .5em;
  border-right: 1px solid rgba(255,255,255,.25);
  margin-right: .5em;
}

.menu-icon {
  margin-right: .1em;
}

/*DropDown Menu's*/
.dropdown-item {
  padding: .8rem 1.5rem;
}

.dropdown-item:hover {
color: white;
background: hsl(211deg 30% 69%);
}

.dropdown-menu {
  padding: 0;
  left: -3px;
}

/*Dropw Down Button*/
button.nav-link {
  outline: none;
}

/*Footer a tags*/
.text-muted a {
  color: hsl(211deg 55% 59%);
}
=======
div.vertical-space {
  margin-top: 2em;
}

div.card-container {
  margin: 0 auto;
}

